# mcp-server-starrocks

./: .gitignore  CODE_OPTIMIZATION_GUIDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
src/mcp_server_starrocks/: db_client.py  db_summary_manager.py  server.py
tests/: test_db_client.py
